Initial setup of left-sidebar with images and captions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    test stuff
+    <div id="container">
+        <div class="main-view">
+            <img src="images/laura-adai-EVpuANEtz4k-unsplash.jpg" alt="stovetop" id="stovetop-image">
+            <div class="logo-text">&#129300; V's Sign-Up</div>
+            <div id="stovetop-credit">
+                Photo by <a href="https://www.lauraadaiphotography.com/">Laura Adai</a> on <a href="https://unsplash.com/photos/EVpuANEtz4k">Unsplash</a>
+            </div>
+        </div> 
+        <div id="signup-container">
+            placeholdertext
+        </div>
+        </div>
+    </div>
     
 </body>
 </html>
