added sidebar image assets and layout

--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Charm&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
         <div class="main-view">
             <img src="images/laura-adai-EVpuANEtz4k-unsplash.jpg" alt="stovetop" id="stovetop-image">
-            <div class="logo-text">&#129300; V's Sign-Up</div>
+            <div class="logo-space">
+                <div class="logo-image">
+                    <img src="images/chef-hat.png" alt="chef-icon" id="chef-hat-image">
+                </div>
+                <div class="logo-text">V's Sign-Up Form</div>
+            </div>
             <div id="stovetop-credit">
-                Photo by <a href="https://www.lauraadaiphotography.com/">Laura Adai</a> on <a href="https://unsplash.com/photos/EVpuANEtz4k">Unsplash</a>
+                Sidebar photo by <a href="https://www.lauraadaiphotography.com/">Laura Adai</a> on <a href="https://unsplash.com/photos/EVpuANEtz4k">Unsplash</a>
+                <br>
+                Chef icon created by <a href="https://www.flaticon.com/free-icons/chef" title="chef icons">Freepik - Flaticon</a>
             </div>
         </div> 
         <div id="signup-container">
