Added initial placeholder layouts for signup form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
             </div>
         </div> 
         <div id="signup-container">
-            placeholdertext
+            <div id="signup-header" class="page-background">
+                Sample text for signup-header <br>
+                This is a placeholder for more information on what you're signing up for!
+            </div>
+            <div id="signup-inputs">
+                Please input your information below
+                First name
+                Last name
+                email
+                phone number
+                password
+                confirm password
+            </div>
+            <div id="account-creation" class="page-background">
+                <button id="create-account-button">Create Account</button>
+                Already have an account? Log in
+            </div>
         </div>
         </div>
     </div>
