--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
                     </div>
                     <div class="input-group">
                         <label for="user_password">Password:</label>
-                        <input type="password" id="user_password" name="user_password" required>
+                        <input type="password" id="user_password" name="user_password" class="error" required>
+                        <div id="password-footnote">*passwords must match</div>
                     </div>
                     <div class="input-group">
                         <label for="confirm_password">Confirm Password:</label>
-                        <input type="password" id="confirm_password" name="confirm_password" required>
+                        <input type="password" id="confirm_password" name="confirm_password" class="error" required>
                     </div>
                 </form>
             </div>
